# daec-handicap-lists

./: Cargo.toml  README.md  competition.csv  gliderlist.csv  sort_competition.py
.github/workflows/: ci.yml
assets/: competition.jinja  dmst.jinja  styles.css
src/: competition.rs  dmst.rs
src/snapshots/: daec_handicap_lists__tests__competition.snap  daec_handicap_lists__tests__dmst.snap
