[package]
name = "daec-handicap-lists"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.53", features = ["derive"] }
csv = "=1.4.0"
headless_chrome = { version = "=1.0.18", default-features = false }
minijinja = "=2.14.0"
serde = { version = "=1.0.228", features = ["derive"] }
tempfile = "=3.23.0"
url = "=2.5.7"

[dev-dependencies]
insta = "=1.44.1"
